[tool.poetry]
name = "scrip_confluence"
version = "0.1.0"
description = ""
authors = ["Ramses Almeida <ramses.almeida@pagar.me>"]

[tool.poetry.dependencies]
python = "^3.8"
atlassian-python-api = "3.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
